hphp/test/zend/bad/Zend/tests/bug64821.2.php
<?php

class a extends exception {
	public function __construct() {
		$this->line = array();
	}
}

throw new a;

?>